<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="usernameText">Username: </string>
    <string name="app_name">TravelAFH</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AboutMenu">About</string>
    <string name="DawsonMenu">Dawson</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_tip_cal">TipCalActivity</string>
    <string name="billAmount">Bill Amount</string>
    <string name="upArrow">Increment By One</string>
    <string name="downArrow">Decrease By One</string>
    <string name="getInfoTitle">Your Information</string>
    <string name="okBtn">OK</string>
    <string name="cancelBtn">Cancel</string>
    <string name="usernamePrompt">Please Enter a Username</string>
    <string name="firstNamePrompt">Please Enter your first name</string>
    <string name="lastNamePrompt">Please Enter your last name</string>
    <string name="invalidInputToast">Invalid Input</string>
    <string name="menuToast1">You click on Current Trip Itinerary</string>
    <string name="menuToast2">You click on Today Itinerary</string>
    <string name="menuToast3">You click on Tip Calculator</string>
    <string name="menuToast4">You click on Conversion</string>
    <string name="menuToast5">You click on What\'s near me</string>
    <string name="menuToast6">You click on Weather check</string>
    <string name="menuToast7">You click on Currency conversion</string>
    <string name="menuToast8">You click on Budget</string>
    <string name="menuToast9">You click on Local Customs</string>
    <string name="menuToast10">You click on image </string>
    <string name="title_activity_coming_soon">ComingSoonActivity</string>
    <string name="comingSoon">Coming Soon!</string>
    <string name="title_activity_conversion">ConversionActivity</string>
    <string name="convert">Convert :</string>
    <string name="to">To :</string>
    <string name="convertionButton">Convert</string>
    <string name="title_activity_currency">CurrencyActivity</string>
    <string name="currencyAmount">Enter an amount</string>
    <string name="percentTip">Tip Percent (%)</string>
    <string name="totalAmount">Total Amount</string>
    <string name="tipAmount">Tip Amount</string>
    <string name="splitAmount">Split Amount</string>
    <string name="numPeople">Split Between </string>
    <string name="From">From: </string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="enterLocation">Enter an city :</string>
    <string name="weatherTitle">Weather Away From Home</string>
    <string name="enterCountryCode">Enter an country code :</string>
    <string name="getWeather">Get Weather</string>
    <string name="programmerName">Frank Birikundavyi</string>
    <string name="setting">Setting</string>
    <string name="programmerInfo">3rd years Computer Science Student at Dawson College</string>
    <string name="programmerPic">This is Frank Birikundavyi\'s headshot</string>
    <string name="program">420­518­DW Mobile</string>
    <string name="title_activity_setting">SettingActivity</string>
	<string name="lastNameText">Last Name: </string>
	<string name="firstNameText">First Name: </string>
	<string name="update">Save Changes </string>
</resources>
