<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.birikfr.travelafh.AboutActivity"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ImageView
        android:contentDescription="@string/programmerPic"
        android:src="@drawable/frankbirikundavyi"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_gravity="center"
        />
    <TextView 
        android:id="@+id/programmerNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programmerName"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="7dp"/>
    <TextView 
        android:id="@+id/programmerInfoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programmerInfo"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="7dp"/>
    <View
        android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="#FFFFFF" />
    <TextView 
        android:id="@+id/programId"
        android:paddingTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/program"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"/>

</LinearLayout>
