<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.birikfr.travelafh.SettingActivity"
android:background="@drawable/greybackground">
<TableLayout 
    android:id="@+id/formSetting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
       <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >
           <TextView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/usernameText"
               ></TextView>
           <EditText
               	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:id="@+id/usernameEdit" />
           
       </TableRow>
       <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >
           <TextView
               android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/firstNameText"
               ></TextView>
           <EditText 
               android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:id="@+id/firstNameEdit"/>
           
       </TableRow>
       <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >
           <TextView
               android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/lastNameText"
               ></TextView>
           <EditText 
               android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:id="@+id/lastNameEdit"/>
           
       </TableRow>
       <Button
		    	android:layout_width="match_parent"         
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonshape"
                android:padding="5dp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/update"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:onClick="update"
		    ></Button>
    
</TableLayout>
    
</LinearLayout>
