<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.birikfr.travelafh.TipCalActivity"
    android:orientation="vertical"
    android:background="@drawable/greybackground" >

    <TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/billAmount"
            android:padding="3dip"
            android:layout_weight=".35"
            />
        <ImageButton
           	android:background="@drawable/arrow_up"
            android:gravity="right"
            android:padding="3dip" 
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10" 
             android:id="@+id/up_billAmount"
            />
        <EditText
            android:inputType="numberDecimal"
            android:layout_width="0dip"
            android:layout_weight=".45"
            android:id="@+id/billAmount"
            ></EditText>
        <ImageButton 
            android:background="@drawable/arrow_down"
            android:gravity="right"
            android:padding="3dip"
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10"
            android:id="@+id/down_billAmount"
            
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/percentTip"
            android:padding="3dip"
            android:layout_weight=".35"
            />
        <ImageButton
           	android:background="@drawable/arrow_up"
            android:gravity="right"
            android:padding="3dip" 
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10"
             android:id="@+id/up_percentTip" />
        <EditText
            android:inputType="numberDecimal"
            android:layout_width="0dip"
            android:layout_weight=".45"
            android:id="@+id/percentTip"
            ></EditText>
        <ImageButton 
            android:background="@drawable/arrow_down"
            android:gravity="right"
            android:padding="3dip"
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10"
            android:id="@+id/down_percentTip" />
            />
    </TableRow>
	<TableRow>
        <TextView
            android:text="@string/tipAmount"
            android:padding="3dip"
            android:layout_weight=".35"
            />
        <ImageButton
           	android:background="@drawable/arrow_up"
            android:gravity="right"
            android:padding="3dip" 
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10" 
            android:id="@+id/up_tipAmount"/>
        <EditText
            android:inputType="numberDecimal"
            android:layout_width="0dip"
            android:layout_weight=".45"
            android:id="@+id/tipAmount"
            ></EditText>
        <ImageButton 
            android:background="@drawable/arrow_down"
            android:gravity="right"
            android:padding="3dip"
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10"
             android:id="@+id/down_tipAmount"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/totalAmount"
            android:padding="3dip"
            android:layout_weight=".35"
            />
        <ImageButton
           	android:background="@drawable/arrow_up"
            android:gravity="right"
            android:padding="3dip" 
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10" 
            android:id="@+id/up_totalAmount"/>
        <EditText
            android:inputType="numberDecimal"
            android:layout_width="0dip"
            android:layout_weight=".45"
            android:id="@+id/totalAmount"
            ></EditText>
        <ImageButton 
            android:background="@drawable/arrow_down"
            android:gravity="right"
            android:padding="3dip"
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10"
            android:id="@+id/down_totalAmount"
            />
    </TableRow>
     <TableRow>
        <TextView
            android:text="@string/numPeople"
            android:padding="3dip"
            android:layout_weight=".35"
            />
        <ImageButton
           	android:background="@drawable/arrow_up"
            android:gravity="right"
            android:padding="3dip" 
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10" 
            android:id="@+id/up_numPeople"/>
        <EditText
            android:inputType="numberDecimal"
            android:layout_width="0dip"
            android:layout_weight=".45"
            android:id="@+id/numPeople"
            ></EditText>
        <ImageButton 
            android:background="@drawable/arrow_down"
            android:gravity="right"
            android:padding="3dip"
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10"
            android:id="@+id/down_numPeople"
            />
    </TableRow>
     <TableRow>
        <TextView
            android:text="@string/splitAmount"
            android:padding="3dip"
            android:layout_weight=".35"
            />
        <ImageButton
           	android:background="@drawable/arrow_up"
            android:gravity="right"
            android:padding="3dip" 
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10" 
             android:id="@+id/up_splitAmount"/>
        <EditText
            android:inputType="numberDecimal"
            android:layout_width="0dip"
            android:layout_weight=".45"
            android:id="@+id/splitAmount"
            ></EditText>
        <ImageButton 
            android:background="@drawable/arrow_down"
            android:gravity="right"
            android:padding="3dip"
            android:layout_height="60dip"
            android:layout_width="0dip"
            android:layout_weight=".10"
             android:id="@+id/down_splitAmount"
            />
    </TableRow>
    
</TableLayout>

</LinearLayout>
